--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">Clarence Taylor</span>
+      <span class="d-block d-lg-none">Emanoel Lucas</span>
       <span class="d-none d-lg-block">
         <img class="img-fluid img-profile  mx-auto mb-2" src="img/foto.jpg" alt="">
       </span>
@@ -50,7 +50,7 @@
           <a class="nav-link js-scroll-trigger" href="#skills">Habilidades</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
+          <a class="nav-link js-scroll-trigger" href="#interests">Interesses</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
@@ -64,23 +64,23 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
         <h1 class="mb-0">Emanoel
-          <span class="text-primary">Taylor</span>
+          <span class="text-primary">Lucas</span>
         </h1>
-        <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-          <a href="mailto:name@email.com">name@email.com</a>
+        <div class="subheading mb-5">São Luís, MA · (98) 981969799 ·
+          <a href="mailto:emanoellucas123456@gmail.com">emanoellucas123456@gmail.com</a>
         </div>
         <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
         <div class="social-icons">
-          <a href="#">
+          <a target="_blank" href="https://www.linkedin.com/in/emanoel-lucas-m-7a1536a9/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="#">
+          <a target="_blank" href="https://www.github.com/emanoellucasml">
             <i class="fab fa-github"></i>
           </a>
-          <a href="#">
+          <a href="https://twitter.com/EmanoelLucas19">
             <i class="fab fa-twitter"></i>
           </a>
-          <a href="#">
+          <a target="_blank" href="https://www.facebook.com/emanoel.lucas.3920">
             <i class="fab fa-facebook-f"></i>
           </a>
         </div>
@@ -178,28 +178,30 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
       <div class="w-100">
         <h2 class="mb-2">Habilidades</h2>
-
         <div class="subheading mb-1">Linguagens de Programação &amp; Ferramentas</div>
         <ul class="list-inline dev-icons">
-          <li class="list-inline-item">
+          <li class="list-inline-item" data-toggle="tooltip" data-placement="top" title="Habilidades em HTML5">
             <i class="fab fa-html5"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-css3-alt"></i>
+            <i class="fab fa-css3-alt" data-toggle="tooltip" data-placement="top" title="Habilidades em CSS3"></i>
           </li>
-          <li class="list-inline-item">
+          <li class="list-inline-item" data-toggle="tooltip" data-placement="top" title="Habilidades em JavaScript">
             <i class="fab fa-js-square"></i>
           </li>
-          <li class="list-inline-item">
+          <li class="list-inline-item" data-toggle="tooltip" data-placement="top" title="Habilidades em Bootstrap">
+              <i class="fab fa-bootstrap"></i>
+            </li>
+          <li class="list-inline-item" data-toggle="tooltip" data-placement="top" title="Habilidades em PHP7 e Orientação a Objetos">
             <i class="fab fa-php"></i>
           </li>
-          <li class="list-inline-item">
+          <li class="list-inline-item" data-toggle="tooltip" data-placement="top" title="Habilidades em GIT">
             <i class="fab fa-git-square"></i>
           </li>
-          <li class="list-inline-item">
+          <li class="list-inline-item" data-toggle="tooltip" data-placement="top" title="Habilidades em GitHub">
             <i class="fab fa-github-square"></i>
           </li>
-          <li class="list-inline-item">
+          <li class="list-inline-item" data-toggle="tooltip" data-placement="top" title="Habilidades em Modelagem de banco de dados relacional e SGBD MySQL">
             <i class="fas fa-database"></i>
           </li>
           <!-- <li class="list-inline-item">
@@ -253,7 +255,7 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
-        <h2 class="mb-5">Interests</h2>
+        <h2 class="mb-5">Interesses</h2>
         <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
         <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
       </div>
