--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="subheading mb-5">São Luís, MA · (98) 981969799 ·
           <a href="mailto:emanoellucas123456@gmail.com">emanoellucas123456@gmail.com</a>
         </div>
-        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <p class="lead mb-5">Sou um estudante de Ciência da Computação, entusiasta do software livre/Linux e desenvolvedor web júnior. Tenho experiência em desenvolvimento web com linguagem PHP (e também seus frameworks: CodeIgniter e Laravel) e MySQL como sistema de gerenciamento de banco de dados. Também já desenvolvi projetos em Java e C# - sempre utilizando o padrão arquitetural MVC.</p>
         <div class="social-icons">
           <a target="_blank" href="https://www.linkedin.com/in/emanoel-lucas-m-7a1536a9/">
             <i class="fab fa-linkedin-in"></i>
