Adição dos projetos já feitos

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <a class="nav-link js-scroll-trigger" href="#interests">Interesses</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
+          <a class="nav-link js-scroll-trigger" href="#awards">Projetos</a>
         </li>
       </ul>
     </div>
@@ -151,7 +151,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Universidade Federal do Maranhão (UFMA)</h3>
             <div class="subheading mb-3">Bacharelado em Ciência da Computação</div>
-            <p>GPA: </p>
+            <!-- <p>GPA: </p> -->
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Agosto 2019 - Atualmente</span>
@@ -162,7 +162,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Instituto Federal do Maranhão (IFMA) - Campus Monte Castelo</h3>
             <div class="subheading mb-3">Curso Técnico em Informática, com foco em programação de computadores.</div>
-            <p>G.P.A: 8</p>
+            <!-- <p>G.P.A: 8</p> -->
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Março 2016 - Março 2019</span>
@@ -264,8 +264,8 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
-        <h2 class="mb-5">Awards &amp; Certifications</h2>
-        <ul class="fa-ul mb-0">
+        <h2 class="mb-5">Um pouco do que já fiz</h2>
+        <!-- <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             Google Analytics Certified Developer</li>
@@ -292,7 +292,39 @@
             <i class="fa-li fa fa-trophy text-warning"></i>
             3<sup>rd</sup>
             Place - James Buchanan High School - Hackathon 2005</li>
-        </ul>
+        </ul> -->
+        <div class="row">
+          <div class="col-sm-4">
+              <div class="card" style="width: 18rem; max-height: 400px !important;">
+                  <img class="card-img-top" src="img/site1.png" alt="Card image cap" style="max-height: 286px !important;">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
+          </div>
+          <div class="col-sm-4">
+              <div class="card" style="width: 18rem; max-height: 400px !important;">
+                  <img class="card-img-top" src="img/site2.png" alt="Card image cap" style="max-height: 286px !important;">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
+          </div>
+          <div class="col-sm-4">
+              <div class="card" style="width: 18rem; max-height: 400px !important;">
+                  <img class="card-img-top" src="img/site3.png" alt="Card image cap" style="max-height: 286px !important;">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
+          </div>
+        </div>
       </div>
     </section>
 
