Adição do texto aos projetos feitos

--- a/index.html
+++ b/index.html
@@ -298,9 +298,9 @@
               <div class="card" style="width: 18rem; max-height: 400px !important;">
                   <img class="card-img-top" src="img/site1.png" alt="Card image cap" style="max-height: 286px !important;">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <h5 class="card-title">Cores do Mará</h5>
+                    <p class="card-text">Site desenvolvido para uma ONG durante meu estágio na empresa ATS.</p>
+                    <a href="http://coresdomara.org.br" target="_blank" class="btn btn-primary">Abrir &nbsp;<i class="fas fa-external-link-alt"></i></a>
                   </div>
                 </div>
           </div>
@@ -308,9 +308,9 @@
               <div class="card" style="width: 18rem; max-height: 400px !important;">
                   <img class="card-img-top" src="img/site2.png" alt="Card image cap" style="max-height: 286px !important;">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <h5 class="card-title">Amada</h5>
+                    <p class="card-text">Site desenvolvido para uma ONG durante meu estágio na empresa ATS.</p>
+                    <a href="http://amadaslz.org.br" target="_blank" class="btn btn-primary">Abrir &nbsp;<i class="fas fa-external-link-alt"></i></a>
                   </div>
                 </div>
           </div>
@@ -318,9 +318,9 @@
               <div class="card" style="width: 18rem; max-height: 400px !important;">
                   <img class="card-img-top" src="img/site3.png" alt="Card image cap" style="max-height: 286px !important;">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <h5 class="card-title">É tempo de aprender</h5>
+                    <p class="card-text">Site desenvolvido por mim durante um projeto de iniciação científica no IFMA..</p>
+                    <a href="#" class="btn btn-primary">Abrir &nbsp;<i class="fas fa-external-link-alt"></i></a>
                   </div>
                 </div>
           </div>
