Ajuste da largura das imagens

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Resume - Start Bootstrap Theme</title>
+  <title>Emanoel Lucas | Desenvolvedor Web Júnior </title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -319,7 +319,7 @@
                   <img class="card-img-top" src="img/site3.png" alt="Card image cap" style="max-height: 286px !important;">
                   <div class="card-body">
                     <h5 class="card-title">É tempo de aprender</h5>
-                    <p class="card-text">Site desenvolvido por mim durante um projeto de iniciação científica no IFMA..</p>
+                    <p class="card-text">Site desenvolvido por mim durante um projeto de iniciação científica no IFMA.</p>
                     <a href="#" class="btn btn-primary">Abrir &nbsp;<i class="fas fa-external-link-alt"></i></a>
                   </div>
                 </div>
