--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
 <html lang="en">
 
 <head>
-
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
 
   <title>Emanoel Lucas | Desenvolvedor Web Júnior </title>
-
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -320,7 +318,7 @@
                   <div class="card-body">
                     <h5 class="card-title">É tempo de aprender</h5>
                     <p class="card-text">Site desenvolvido por mim durante um projeto de iniciação científica no IFMA.</p>
-                    <a href="#" class="btn btn-primary">Abrir &nbsp;<i class="fas fa-external-link-alt"></i></a>
+                    <a href="#awards" class="btn btn-primary" onclick="alert('Infezmente, esse objeto não foi disponibilizado publicamente!');">Abrir &nbsp;<i class="fas fa-external-link-alt"></i></a>
                   </div>
                 </div>
           </div>
