--- a/index.html
+++ b/index.html
@@ -89,51 +89,35 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
-        <h2 class="mb-5">Experience</h2>
+        <h2 class="mb-5">Experiência</h2>
+
+   
+     
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Senior Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+            <h3 class="mb-0">Estagiário de Desenvolvimento WEB</h3>
+            <div class="subheading mb-3">ATS - Associação Tecnologia Solidária</div>
+            <p>Atuei, juntamente à equipe, no desenvolvimento de sites utilizando linguagem PHP (framework Laravel) na parte de back-end e, na parte de front-end, desenvolvi interfaces utilizando as tecnologias HTML5, CSS3, JavaScript e os frameworks Bootstrap e Materialize.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2013 - Present</span>
+            <span class="text-primary">Outubro 2018 - Dezembro 2018</span>
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">December 2011 - March 2013</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Junior Web Designer</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">July 2010 - December 2011</span>
-          </div>
-        </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">Web Design Intern</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+            <div class="resume-content">
+              <h3 class="mb-0">Pesquisador do Instituto Federal do Maranhão</h3>
+              <div class="subheading mb-3">Instituto Federal do Maranhão - Campus Monte Castelo</div>
+              <p>
+                Durante o ensino médio-técnico, no Instituto Federal do Maranhão, desenvolvi, como projeto de iniciação científica, um site cujo objetivo era a disponibilizar a professores e alunos do campo em fase de alfabetização material didático que os auxiliasse no proccesso de alfabetização.
+              </p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Setembro 2017 - Março 2019</span>
+            </div>
           </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">September 2008 - June 2010</span>
-          </div>
-        </div>
 
       </div>
 
