--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">Instituto Federal do Maranhão (IFMA) - Campus Monte Castelo</h3>
-            <div class="subheading mb-3">Curso Técnico em Informática, com foco em programação de computadores.</div>
+            <div class="subheading mb-3">Curso Técnico em Informática - com foco em programação de computadores.</div>
             <!-- <p>G.P.A: 8</p> -->
           </div>
           <div class="resume-date text-md-right">
@@ -237,8 +237,11 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interesses</h2>
-        <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+        <p>
+            Além de gostar e estudar diariamente as tecnologias de desenvolvimento Web, também, como aspirante a cientista da computação, passo boa parte do meu tempo aprendendo sobre assuntos que me instigam e me desafiam, tais como: aprendizagem de máquina, inteligência aritifical, ciência de dados e matemática.
+        </p>
+        <!-- <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p> -->
+        <!-- <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p> -->
       </div>
     </section>
 
