Edição do workflow

--- a/index.html
+++ b/index.html
@@ -218,16 +218,16 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
-            Mobile-First, Responsive Design</li>
+            Mobile-First, Design Responsivo</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Cross Browser Testing &amp; Debugging</li>
-          <li>
+            UML</li>
+          <!-- <li>
             <i class="fa-li fa fa-check"></i>
             Cross Functional Teams</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Agile Development &amp; Scrum</li>
+            Agile Development &amp; Scrum</li> -->
         </ul>
       </div>
     </section>
@@ -305,7 +305,7 @@
                   <div class="card-body">
                     <h5 class="card-title">É tempo de aprender</h5>
                     <p class="card-text">Site desenvolvido por mim durante um projeto de iniciação científica no IFMA.</p>
-                    <a href="#awards" class="btn btn-primary" onclick="alert('Infezmente, esse objeto não foi disponibilizado publicamente!');">Abrir &nbsp;<i class="fas fa-external-link-alt"></i></a>
+                    <a href="#awards" class="btn btn-primary" onclick="alert('Infezmente, esse objeto não foi disponibilizado publicamente devido a restrições impostas pelo protocolo do Instituto Federal!');">Abrir &nbsp;<i class="fas fa-external-link-alt"></i></a>
                   </div>
                 </div>
           </div>
