--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="utf-8">
@@ -185,33 +185,6 @@
           <li class="list-inline-item" data-toggle="tooltip" data-placement="top" title="Habilidades em Modelagem de banco de dados relacional e SGBD MySQL">
             <i class="fas fa-database"></i>
           </li>
-          <!-- <li class="list-inline-item">
-            <i class="fab fa-angular"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-react"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-node-js"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-sass"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-less"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-wordpress"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-gulp"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-grunt"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-npm"></i>
-          </li> -->
         </ul>
 
         <div class="subheading mb-3">Workflow</div>
@@ -222,12 +195,6 @@
           <li>
             <i class="fa-li fa fa-check"></i>
             UML</li>
-          <!-- <li>
-            <i class="fa-li fa fa-check"></i>
-            Cross Functional Teams</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Agile Development &amp; Scrum</li> -->
         </ul>
       </div>
     </section>
@@ -240,9 +207,7 @@
         <p>
             Além de gostar e estudar diariamente as tecnologias de desenvolvimento Web, também, como aspirante a cientista da computação, passo boa parte do meu tempo aprendendo sobre assuntos que me instigam e me desafiam, tais como: aprendizagem de máquina, inteligência aritifical, ciência de dados e matemática.
         </p>
-        <!-- <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p> -->
-        <!-- <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p> -->
-      </div>
+       </div>
     </section>
 
     <hr class="m-0">
@@ -250,7 +215,6 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
         <h2 class="mb-5">Um pouco do que já fiz</h2>
-        <!-- <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             Google Analytics Certified Developer</li>
@@ -315,14 +279,14 @@
 
   </div>
 
-  <!-- Bootstrap core JavaScript -->
+  <!-- núcleo javascript do bootstrap  -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   <!-- Plugin JavaScript -->
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
-  <!-- Custom scripts for this template -->
+  <!-- scripts customizados para esse template -->
   <script src="js/resume.min.js"></script>
 
 </body>
