--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
       <div class="w-100">
         <h2 class="mb-5">Um pouco do que já fiz</h2>
         <div class="row">
-          <div class="col-sm-4">
+          <div class="col-sm-4 col-lg-12 col-md-12">
               <div class="card" style="width: 18rem; max-height: 400px !important;">
                   <img class="card-img-top" src="img/site1.png" alt="Card image cap" style="max-height: 286px !important;">
                   <div class="card-body">
@@ -226,7 +226,7 @@
                   </div>
                 </div>
           </div>
-          <div class="col-sm-4">
+          <div class="col-sm-4 col-lg-12 col-md-12">
               <div class="card" style="width: 18rem; max-height: 400px !important;">
                   <img class="card-img-top" src="img/site2.png" alt="Card image cap" style="max-height: 286px !important;">
                   <div class="card-body">
@@ -236,7 +236,7 @@
                   </div>
                 </div>
           </div>
-          <div class="col-sm-4">
+          <div class="col-sm-4 col-lg-12 col-md-12">
               <div class="card" style="width: 18rem; max-height: 400px !important;">
                   <img class="card-img-top" src="img/site3.png" alt="Card image cap" style="max-height: 286px !important;">
                   <div class="card-body">
