correção do espaçamento na barra superior

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body>
 		<div class="site">
 			<div class="barrasuperior">
-				<div class="barrasuperiorinterna">
+				<div class="barrasuperiorinterna flex">
 					<form action="" class="form-check form-check-inline">
 					<input type="text" placeholder="Pesquisar..." class="campo_pesquisa"></input>
 					<input type="submit" value="Ir" class="btn btn-info">
