--- a/atividades.html
+++ b/atividades.html
@@ -10,7 +10,7 @@
 	<body>
 		<div class="site">
 			<div class="barrasuperior">
-				<div class="barrasuperiorinterna">
+				<div class="barrasuperiorinterna flex">
 					<form action="" class="form-check form-check-inline">
 					<input type="text" placeholder="Pesquisar..." class="campo_pesquisa"></input>
 					<input type="submit" value="Ir" class="btn btn-info">
@@ -25,8 +25,8 @@
 						<a href="formas-das-letras.html"><li class="itemcentralizavel" style="background-color: #ff854d">FORMAS DAS LETRAS</li></a>
 						<a href="sons-da-fala.html"><li class="itemcentralizavel" style="background-color: #ff9333">SONS DA FALA</li></a>
 						<a href="unidade-palavra.html"><li class="itemcentralizavel" style="background-color: #ffae5e">UNIDADE PALAVRA</li></a>
-						<a href="organizacao-da-pagina-escrita.html"><li class="item" style="background-color: #ffae5e">ORGANIZAÇÃO DA PÁGINA ESCRITA</li></a>
-						<a href="atividades.html"><li class="itemcentralizavel" style="background-color: #ffa67d">ATIVIDADES</li></a>
+						<!--<a href="organizacao-da-pagina-escrita.html"><li class="item" style="background-color: #ffae5e">ORGANIZAÇÃO DA PÁGINA ESCRITA</li></a>-->
+						<a href="atividades.html"><li class="itemcentralizavel" style="background-color: #ffa67d">&#9656;&nbsp;ATIVIDADES</li></a>
 						<a href="leituras-complementares.html"><li class="item" style="background-color: #ffc389">LEITURAS COMPLEMENTARES</li></a>
 					</ul>
 				</div>
