--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 			<div class="ladoesquerdo">
 				<div class="menu">
 					<ul>
-						<a href="index.html"><li><img src="imagem/introducao.png"/></li></a>
+						<a href="index.html"><li><img src="imagem/introducao1.png"/></li></a>
 						<a href="a-ideia-de-simbolo.html"><li class="itemcentralizavel" style="background-color: #ff7833">A IDEIA DE SÍMBOLO</li></a>
 						<a href="formas-das-letras.html"><li class="itemcentralizavel" style="background-color: #ff854d">FORMAS DAS LETRAS</li></a>
 						<a href="sons-da-fala.html"><li class="itemcentralizavel" style="background-color: #ff9333">SONS DA FALA</li></a>
 						<a href="unidade-palavra.html"><li class="itemcentralizavel" style="background-color: #ffae5e">UNIDADE PALAVRA</li></a>
-						<a href="organizacao-da-pagina-escrita.html"><li class="item" style="background-color: #ffae5e">ORGANIZAÇÃO DA PÁGINA ESCRITA</li></a>
+						<!--<a href="organizacao-da-pagina-escrita.html"><li class="item" style="background-color: #ffae5e">ORGANIZAÇÃO DA PÁGINA ESCRITA</li></a>-->
 						<a href="atividades.html"><li class="itemcentralizavel" style="background-color: #ffa67d">ATIVIDADES</li></a>
 						<a href="leituras-complementares.html"><li class="item" style="background-color: #ffc389">LEITURAS COMPLEMENTARES</li></a>
 					</ul>
