--- a/unidade-palavra.html
+++ b/unidade-palavra.html
@@ -10,7 +10,7 @@
 	<body>
 		<div class="site">
 			<div class="barrasuperior">
-				<div class="barrasuperiorinterna">
+				<div class="barrasuperiorinterna flex">
 					<form action="" class="form-check form-check-inline">
 					<input type="text" placeholder="Pesquisar..." class="campo_pesquisa"></input>
 					<input type="submit" value="Ir" class="btn btn-info">
@@ -24,8 +24,8 @@
 						<a href="a-ideia-de-simbolo.html"><li class="itemcentralizavel" style="background-color: #ff7833">A IDEIA DE SÍMBOLO</li></a>
 						<a href="formas-das-letras.html"><li class="itemcentralizavel" style="background-color: #ff854d">FORMAS DAS LETRAS</li></a>
 						<a href="sons-da-fala.html"><li class="itemcentralizavel" style="background-color: #ff9333">SONS DA FALA</li></a>
-						<a href="unidade-palavra.html"><li class="itemcentralizavel" style="background-color: #ffae5e">UNIDADE PALAVRA</li></a>
-						<a href="organizacao-da-pagina-escrita.html"><li class="item" style="background-color: #ffae5e">ORGANIZAÇÃO DA PÁGINA ESCRITA</li></a>
+						<a href="unidade-palavra.html"><li class="itemcentralizavel" style="background-color: #ffae5e">&#9656;&nbsp;UNIDADE PALAVRA</li></a>
+						<!--<a href="organizacao-da-pagina-escrita.html"><li class="item" style="background-color: #ffae5e">ORGANIZAÇÃO DA PÁGINA ESCRITA</li></a>-->
 						<a href="atividades.html"><li class="itemcentralizavel" style="background-color: #ffa67d">ATIVIDADES</li></a>
 						<a href="leituras-complementares.html"><li class="item" style="background-color: #ffc389">LEITURAS COMPLEMENTARES</li></a>
 					</ul>
@@ -33,7 +33,7 @@
 			</div>
 			<div class="ladodireito">
 				<div class="conteudo">
-					<iframe width="75%" src="conteudo/unidadepalavra.html" height="700px;"></iframe>
+					<iframe width="75%" src="conteudo/introducao.html" height="700px;"></iframe>
 				</div>
 			</div>
 		</div>
