--- a/empresa/index.html
+++ b/empresa/index.html
@@ -14,36 +14,50 @@
 </head>
 <body>
     <div class="container-fluid">
-        <div class="row flex justify-content-center align-items-center"">
+        <div class="row flex justify-content-center align-items-center mb-4 mt-3">
             <div class="col-sm-6 col-md-6 col-lg-6 flex" style="text-align: center;">
-                <img src="http://2.bp.blogspot.com/-35jBTVCvJpI/U2Kcl2G9oJI/AAAAAAAAA6s/ls2WlWt4VfY/s1600/circulo+png+para+logotipo+by++nicoly+3.png" width="250px" height="250px" alt="">
+                <img src="logo.png" width="220px" height="220px" style="border-radius: 110px">
             </div>
         </div>
         <div class="row flex align-items-center justify-content-center">
-            <div class="col-sm-5 col-lg-5 col-md-5 btn btn-info mb-2 mr-2 ml-2">
+            <div class="col-sm-5 col-lg-5 col-md-5 btn btn-info mb-3 mr-2 ml-2">
                 <i class="fa fa-briefcase fa-5x" aria-hidden="true"></i>
+                <p>Empresa</p>
             </div>
-            <div class="col-sm-5 col-lg-5 col-md-5 btn btn-info mb-2 mr-2 ml-2">
-                <i class="fa fa-truck fa-5x" aria-hidden="true"></i>
+            <div class="col-sm-5 col-lg-5 col-md-5 btn btn-info mb-3 mr-2 ml-2">
+                <i class="fa fa-truck fa-5x" aria-hidden="true"></i></br>
+                <p>Vendas</p>
             </div>
-            <div class="col-sm-5 col-lg-5 col-md-5 btn btn-info mr-2 mb-2 ml-2">
-                <i class="fa fa-whatsapp fa-5x" aria-hidden="true"></i>
+            <div class="col-sm-5 col-lg-5 col-md-5 btn btn-info mr-2 mb-3 ml-2">
+                <i class="fa fa-whatsapp fa-5x" aria-hidden="true"></i></br>
+                <p>Pedidos Online</p>
             </div>
-            <div class="col-sm-5 col-lg-5 col-md-5 btn btn-info mr-2 mb-2 ml-2">
-                <i class="fa fa-map-marker fa-5x" aria-hidden="true"></i>
+            <div class="col-sm-5 col-lg-5 col-md-5 btn btn-info mr-2 mb-3 ml-2">
+                <i class="fa fa-map-marker fa-5x" aria-hidden="true"></i></br>
+                <p>Localização</p>
             </div>
-            <div class="col-sm-5 col-lg-5 col-md-5 btn btn-info mb-2 mr-2 ml-2">
-                <i class="fa fa-credit-card truck fa-5x" aria-hidden="true"></i>
+            <div class="col-sm-5 col-lg-5 col-md-5 btn btn-info mb-3 mr-2 ml-2">
+                <i class="fa fa-credit-card truck fa-5x" aria-hidden="true"></i></br>
+                <p>Cartão fidelidade</p>
             </div>
-            <div class="col-sm-5 col-lg-5 col-md-5 btn btn-info mr-2 mb-2 ml-2">
-                <i class="fa fa-instagram fa-5x" aria-hidden="true"></i>
+            <div class="col-sm-5 col-lg-5 col-md-5 btn btn-info mr-2 mb-3 ml-2">
+                <i class="fa fa-instagram fa-5x" aria-hidden="true"></i></br>
+                <p>Instagram</p>
             </div>
-            <div class="col-sm-5 col-lg-5 col-md-5 btn btn-info mr-2 mb-2 ml-2">
-                <i class="fa fa-user fa-5x" aria-hidden="true"></i>
+            <div class="col-sm-5 col-lg-5 col-md-5 btn btn-info mr-2 mb-3 ml-2">
+                <i class="fa fa-user fa-5x" aria-hidden="true"></i></br>
+                <p>Minha conta</p>
             </div>
-            <div class="col-sm-5 col-lg-5 col-md-5 mr-2 mb-2 ml-2 ml-2">
-                <i class="fa fa-map-user fa-5x" aria-hidden="true"></i>
+            <div class="col-sm-5 col-lg-5 col-md-5 mr-2 mb-1 ml-2 ml-2">
+                <i class="fa fa-map-user fa-5x" aria-hidden="true"></i></br>
             </div>
+        </div>
+        <div class="row rodape">
+           <footer>
+                <div class="col-sm-12 col-lg-12 col-md-12" id="teste">
+                    Empresa &copy | 2019
+                </div>
+           </footer>
         </div>
     </div>
 </body>
