ajuste do cursor: pointer

--- a/empresa/index.html
+++ b/empresa/index.html
@@ -19,32 +19,32 @@
                 <img src="logo.png" width="220px" height="220px" style="border-radius: 110px">
             </div>
         </div>
-        <div class="row flex align-items-center justify-content-center">
-            <div class="col-sm-5 col-lg-5 col-md-5 btn btn-info mb-3 mr-2 ml-2">
+        <div class="row flex align-items-center justify-content-center linha">
+            <div class="col-sm-5 col-lg-5 col-md-5 btn btn-info mb-3 mr-2 ml-2 item">
                 <i class="fa fa-briefcase fa-5x" aria-hidden="true"></i>
                 <p>Empresa</p>
             </div>
-            <div class="col-sm-5 col-lg-5 col-md-5 btn btn-info mb-3 mr-2 ml-2">
+            <div class="col-sm-5 col-lg-5 col-md-5 btn btn-info mb-3 mr-2 ml-2 item">
                 <i class="fa fa-truck fa-5x" aria-hidden="true"></i></br>
                 <p>Vendas</p>
             </div>
-            <div class="col-sm-5 col-lg-5 col-md-5 btn btn-info mr-2 mb-3 ml-2">
+            <div class="col-sm-5 col-lg-5 col-md-5 btn btn-info mr-2 mb-3 ml-2 item">
                 <i class="fa fa-whatsapp fa-5x" aria-hidden="true"></i></br>
                 <p>Pedidos Online</p>
             </div>
-            <div class="col-sm-5 col-lg-5 col-md-5 btn btn-info mr-2 mb-3 ml-2">
+            <div class="col-sm-5 col-lg-5 col-md-5 btn btn-info mr-2 mb-3 ml-2 item">
                 <i class="fa fa-map-marker fa-5x" aria-hidden="true"></i></br>
                 <p>Localização</p>
             </div>
-            <div class="col-sm-5 col-lg-5 col-md-5 btn btn-info mb-3 mr-2 ml-2">
+            <div class="col-sm-5 col-lg-5 col-md-5 btn btn-info mb-3 mr-2 ml-2 item">
                 <i class="fa fa-credit-card truck fa-5x" aria-hidden="true"></i></br>
                 <p>Cartão fidelidade</p>
             </div>
-            <div class="col-sm-5 col-lg-5 col-md-5 btn btn-info mr-2 mb-3 ml-2">
+            <div class="col-sm-5 col-lg-5 col-md-5 btn btn-info mr-2 mb-3 ml-2 item">
                 <i class="fa fa-instagram fa-5x" aria-hidden="true"></i></br>
                 <p>Instagram</p>
             </div>
-            <div class="col-sm-5 col-lg-5 col-md-5 btn btn-info mr-2 mb-3 ml-2">
+            <div class="col-sm-5 col-lg-5 col-md-5 btn btn-info mr-2 mb-3 ml-2 item">
                 <i class="fa fa-user fa-5x" aria-hidden="true"></i></br>
                 <p>Minha conta</p>
             </div>
