criação da página empresa

--- a/empresa/index.html
+++ b/empresa/index.html
@@ -21,8 +21,10 @@
         </div>
         <div class="row flex align-items-center justify-content-center linha">
             <div class="col-sm-5 col-lg-5 col-md-5 btn btn-info mb-3 mr-2 ml-2 item">
-                <i class="fa fa-briefcase fa-5x" aria-hidden="true"></i>
-                <p>Empresa</p>
+                <a href="empresa.html">
+                    <i class="fa fa-briefcase fa-5x" aria-hidden="true"></i>
+                    <p>Empresa</p>
+                </a>
             </div>
             <div class="col-sm-5 col-lg-5 col-md-5 btn btn-info mb-3 mr-2 ml-2 item">
                 <i class="fa fa-truck fa-5x" aria-hidden="true"></i></br>
