--- a/empresa/index.html
+++ b/empresa/index.html
@@ -16,7 +16,7 @@
     <div class="container-fluid">
         <div class="row flex justify-content-center align-items-center mb-4 mt-3">
             <div class="col-sm-6 col-md-6 col-lg-6 flex" style="text-align: center;">
-                <img src="logo.png" width="220px" height="220px" style="border-radius: 110px">
+                <img src="logo1.png" width="190px" height="190px" style="border-radius: 120px">
             </div>
         </div>
         <div class="row flex align-items-center justify-content-center linha">
