--- a/empresa/empresa.html
+++ b/empresa/empresa.html
@@ -41,20 +41,15 @@
             </div>
         </div>
     </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12 col-lg-12 col-md-12 col-xs-12">
-                <i class="fa fa-user fa-3x" aria-hidden="true"></i>
-                
+    <div class="container-fluid">
+        <div class="row" style="background: #6c757d;">
+            <div class="btn-group" role="group" aria-label="Basic example">
+                <div class="btn btn-secondary">
+                    <i class="fa fa-user fa-2x" aria-hidden="true"></i>
+                </div>
             </div>
-        </div>
-
-        <div class="row">
-            <div class="col-sm-1 col-xs-1 col-md-1 col-lg-1" style="background-color: orange;">
-                ok
-            </div>
-            <div class="col-sm-2 col-xs-2 col-md-2 col-lg-2" style="background-color: blue;">
-                na
+            <div style="font-size: 14px; line-height: 43px; font-weight: bold; color: white;">
+                Empresa - Distribuidora - 20 anos de tradição
             </div>
         </div>
     </div>
