--- a/empresa/empresa.html
+++ b/empresa/empresa.html
@@ -52,6 +52,11 @@
                 Empresa - Distribuidora - 20 anos de tradição
             </div>
         </div>
+        <div class="row">
+            <div class="col-sm-12 col-lg-12 col-xs-12 col-md-12 text-center">
+                <img src="logo1.png" width="190px" height="190px" style="border-radius: 120px">
+            </div>
+        </div>
     </div>
 </body>
 </html>
