--- a/empresa/empresa.html
+++ b/empresa/empresa.html
@@ -22,7 +22,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://use.fontawesome.com/630b2b9484.js"></script>
     <script>
-        setInterval(oculta, 500);
+        setInterval(oculta, 1800);
         function oculta()
         {
             var preloader = document.querySelector('body #preloader');
@@ -48,7 +48,7 @@
                     <i class="fa fa-user fa-2x" aria-hidden="true"></i>
                 </div>
             </div>
-            <div style="font-size: 14px; line-height: 43px; font-weight: bold; color: white;">
+            <div style="font-size: 14px; line-height: 43px; font-weight: 500; color: white;">
                 Empresa - Distribuidora - 20 anos de tradição
             </div>
         </div>
