--- a/empresa/empresa.html
+++ b/empresa/empresa.html
@@ -52,9 +52,19 @@
                 Empresa - Distribuidora - 20 anos de tradição
             </div>
         </div>
-        <div class="row">
+        <div class="row" style="background-color: white">
             <div class="col-sm-12 col-lg-12 col-xs-12 col-md-12 text-center">
                 <img src="logo1.png" width="190px" height="190px" style="border-radius: 120px">
+            </div>
+            <div class="col-sm-12 col-lg-12 col-md-12 col-xs-12 flex" id="l12">
+                <div style="float: left; margin-right: 1%;">
+                    <i class="fa fa-map-marker fa-2x" aria-hidden="true"></i>
+                </div>
+                <div>
+                        Rua H-20, 10 B - Parque Shalon
+                        São Luís - MA
+                        CEP: 65485-000
+                </div>
             </div>
         </div>
     </div>
