--- a/empresa/empresa.html
+++ b/empresa/empresa.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="utf-8">
+<html lang="pt-br">
 <head>
     <style>
         .load{
@@ -41,8 +41,8 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid">
-        <div class="row" style="background: #6c757d;">
+    <div class="container">
+        <div class="row ldz" style="background: #6c757d;">
             <div class="btn-group" role="group" aria-label="Basic example">
                 <div class="btn btn-secondary">
                     <i class="fa fa-user fa-2x" aria-hidden="true"></i>
@@ -52,7 +52,7 @@
                 Empresa - Distribuidora - 20 anos de tradição
             </div>
         </div>
-        <div class="row" style="background-color: white">
+        <div class="row mb-3 ldz" style="background-color: white">
             <div class="col-sm-12 col-lg-12 col-xs-12 col-md-12 text-center">
                 <img src="logo1.png" width="190px" height="190px" style="border-radius: 120px">
             </div>
@@ -66,7 +66,33 @@
                         CEP: 65485-000
                 </div>
             </div>
+            <div class="col-sm-12 col-lg-12 col-md-12 col-xs-12 flex">
+                <div style="float: left; margin-right: 1%;">
+                    <i class="fa fa-info-circle fa-2x" aria-hidden="true"></i>
+                </div>
+                <div>
+                    Frigorífico
+                </div>
+            </div>
         </div>
+        <div class="row mb-2 ldz" style="background-color: white">
+            <div class="col-sm-6 col-lg-6 col-md-6 col-xs-6 justify-content-start">
+                <i class="fa fa-phone" aria-hidden="true"></i>
+            </div>
+            <div class="col-sm-6 col-lg-6 col-md-6 col-xs-6 flex justify-content-start">
+                Telefone
+            </div>
+        </div>
+       
+
+        <div class="row mb-2 ldz" style="background-color: white">
+                <div class="col-sm-6 col-lg-6 col-md-6 col-xs-6 justify-content-start">
+                    <i class="fa fa-phone" aria-hidden="true"></i>
+                </div>
+                <div class="col-sm-6 col-lg-6 col-md-6 col-xs-6 flex justify-content-start">
+                    Site
+                </div>
+            </div> 
     </div>
 </body>
 </html>
