--- a/empresa/empresa.html
+++ b/empresa/empresa.html
@@ -87,7 +87,7 @@
 
         <div class="row mb-2 ldz" style="background-color: white">
                 <div class="col-sm-6 col-lg-6 col-md-6 col-xs-6 justify-content-start">
-                    <i class="fa fa-phone" aria-hidden="true"></i>
+                    <i class="fa fa-globe" aria-hidden="true"></i>
                 </div>
                 <div class="col-sm-6 col-lg-6 col-md-6 col-xs-6 flex justify-content-start">
                     Site
