--- a/empresa/empresa.html
+++ b/empresa/empresa.html
@@ -74,25 +74,24 @@
                     Frigorífico
                 </div>
             </div>
-        </div>
-        <div class="row mb-2 ldz" style="background-color: white">
-            <div class="col-sm-6 col-lg-6 col-md-6 col-xs-6 justify-content-start">
-                <i class="fa fa-phone" aria-hidden="true"></i>
-            </div>
-            <div class="col-sm-6 col-lg-6 col-md-6 col-xs-6 flex justify-content-start">
-                Telefone
-            </div>
-        </div>
-       
+        </div>       
 
-        <div class="row mb-2 ldz" style="background-color: white">
-                <div class="col-sm-6 col-lg-6 col-md-6 col-xs-6 justify-content-start">
-                    <i class="fa fa-globe" aria-hidden="true"></i>
+        <div class="row mb-2 ldz p-3" style="background-color: white">
+                <div class="col-sm-12 col-lg-12 col-md-12 col-xs-12 text-center">
+                    <i class="fa fa-phone fa-2x" aria-hidden="true" style="float: left;"></i>
+                    Telefone
                 </div>
-                <div class="col-sm-6 col-lg-6 col-md-6 col-xs-6 flex justify-content-start">
+        </div> 
+
+
+
+        <div class="row mb-2 ldz p-3" style="background-color: white">
+                <div class="col-sm-12 col-lg-12 col-md-12 col-xs-12 text-center">
+                    <i class="fa fa-globe fa-2x" aria-hidden="true" style="float: left;"></i>
                     Site
                 </div>
-            </div> 
+        </div> 
+
     </div>
 </body>
 </html>
