--- a/empresa/empresa.html
+++ b/empresa/empresa.html
@@ -53,20 +53,20 @@
             </div>
         </div>
         <div class="row mb-3 ldz" style="background-color: white">
-            <div class="col-sm-12 col-lg-12 col-xs-12 col-md-12 text-center">
+            <div class="col-sm-12 col-lg-12 col-xs-12 col-md-12 text-center mt-5 mb-5">
                 <img src="logo1.png" width="190px" height="190px" style="border-radius: 120px">
             </div>
-            <div class="col-sm-12 col-lg-12 col-md-12 col-xs-12 flex" id="l12">
+            <div class="col-sm-12 col-lg-12 col-md-12 col-xs-12 flex mb-2 mt-4" id="l12">
                 <div style="float: left; margin-right: 1%;">
                     <i class="fa fa-map-marker fa-2x" aria-hidden="true"></i>
                 </div>
                 <div>
-                        Rua H-20, 10 B - Parque Shalon
+                        &nbsp;&nbsp;Rua H-20, 10 B - Parque Shalon
                         São Luís - MA
                         CEP: 65485-000
                 </div>
             </div>
-            <div class="col-sm-12 col-lg-12 col-md-12 col-xs-12 flex">
+            <div class="col-sm-12 col-lg-12 col-md-12 col-xs-12 flex mb-3">
                 <div style="float: left; margin-right: 1%;">
                     <i class="fa fa-info-circle fa-2x" aria-hidden="true"></i>
                 </div>
@@ -76,14 +76,12 @@
             </div>
         </div>       
 
-        <div class="row mb-2 ldz p-3" style="background-color: white">
+        <div class="row mb-3 ldz p-3" style="background-color: white">
                 <div class="col-sm-12 col-lg-12 col-md-12 col-xs-12 text-center">
                     <i class="fa fa-phone fa-2x" aria-hidden="true" style="float: left;"></i>
                     Telefone
                 </div>
         </div> 
-
-
 
         <div class="row mb-2 ldz p-3" style="background-color: white">
                 <div class="col-sm-12 col-lg-12 col-md-12 col-xs-12 text-center">
