--- a/empresa/empresa.html
+++ b/empresa/empresa.html
@@ -83,19 +83,14 @@
                 </div>
         </div> 
 
-        <div class="row mb-2 ldz p-3" style="background-color: white">
+        <div class="row ldz" style="background-color: white">
                 <div class="col-sm-12 col-lg-12 col-md-12 col-xs-12 text-center">
                     <i class="fa fa-globe fa-2x" aria-hidden="true" style="float: left;"></i>
                     Site
                 </div>
         </div> 
 
-        <div class="row mb-2 ldz p-3" style="background-color: white">
-                <div class="col-sm-12 col-lg-12 col-md-12 col-xs-12 text-center">
-                    <i class="fa fa-globe fa-2x" aria-hidden="true" style="float: left;"></i>
-                    trolação
-                </div>
-        </div> 
+       
     </div>
 </body>
 </html>
