one more teste2

--- a/empresa/empresa.html
+++ b/empresa/empresa.html
@@ -76,15 +76,15 @@
             </div>
         </div>       
 
-        <div class="row mb-3 ldz p-3" style="background-color: white">
-                <div class="col-sm-12 col-lg-12 col-md-12 col-xs-12 text-center">
+        <div class="row mb-3 ldz" style="background-color: white">
+                <div class="col-sm-12 col-lg-12 col-md-12 col-xs-12 text-center p-3">
                     <i class="fa fa-phone fa-2x" aria-hidden="true" style="float: left;"></i>
                     Telefone
                 </div>
         </div> 
 
         <div class="row ldz" style="background-color: white">
-                <div class="col-sm-12 col-lg-12 col-md-12 col-xs-12 text-center">
+                <div class="col-sm-12 col-lg-12 col-md-12 col-xs-12 text-center p-3">
                     <i class="fa fa-globe fa-2x" aria-hidden="true" style="float: left;"></i>
                     Site
                 </div>
