--- a/empresa/empresa.html
+++ b/empresa/empresa.html
@@ -83,7 +83,7 @@
                 </div>
         </div> 
 
-        <div class="row ldz" style="background-color: white">
+        <div class="row ldz" style="background-color: white; padding: 1rem;">
                 <div class="col-sm-12 col-lg-12 col-md-12 col-xs-12 text-center p-3">
                     <i class="fa fa-globe fa-2x" aria-hidden="true" style="float: left;"></i>
                     Site
