--- a/empresa/empresa.html
+++ b/empresa/empresa.html
@@ -22,7 +22,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://use.fontawesome.com/630b2b9484.js"></script>
     <script>
-        setInterval(oculta, 300);
+        setInterval(oculta, 2000);
         function oculta()
         {
             var preloader = document.querySelector('body #preloader');
@@ -51,26 +51,28 @@
                 </div>
             </div>
         </div>
+
         <div class="row">
-            <div class="col-sm-12 col-lg-12 col-xs-12 col-md-12 text-center p-5" style="background-color: white;">
+            <div class="col-sm-12 col-lg-12 col-xs-12 col-md-12 text-center pb-5 pt-5" style="background-color: white;">
                 <img src="logo1.png" width="190px" height="190px" style="border-radius: 120px">
             </div>
         </div>
-        <div class="row pb-3 pl-2" style="background-color: white;">
+
+        <div class="row pb-4 pl-2" style="background-color: white;">
             <div class="col-sm-12 col-lg-12 col-xs-12 col-md-12">
                 <i class="fa fa-map-marker fa-2x" aria-hidden="true"></i>
                 Rua H-20, 10 B - Parque Shalon, São Luís - MA, CEP: 65485-000
             </div>
         </div>
        
-        <div class="row pb-4 pl-2" style="background-color: white;">
+        <div class="row pb-4 pl-2 mb-5" style="background-color: white;">
             <div class="col-sm-12 col-lg-12 col-xs-12 col-md-12">
                 <i class="fa fa-info-circle fa-2x" aria-hidden="true"></i>
                 Frigorífico
             </div>
         </div>
 
-        <div class="row mb-3 mt-4 ldz pl-2" style="background-color: white">
+        <div class="row mb-4 mt-3 ldz pl-2" style="background-color: white">
             <div class="col-sm-12 col-lg-12 col-md-12 col-xs-12 text-center p-3">
                 <i class="fa fa-phone fa-2x" aria-hidden="true" style="float: left;"></i>
                 Telefone
@@ -78,12 +80,19 @@
         </div> 
 
         <div class="row ldz pl-2" style="background-color: white; padding: 0.1rem;">
-                <div class="col-sm-12 col-lg-12 col-md-12 col-xs-12 text-center p-3">
-                    <i class="fa fa-globe fa-2x" aria-hidden="true" style="float: left;"></i>
+            <div class="col-sm-12 col-lg-12 col-md-12 col-xs-12 text-center p-3">
+                <i class="fa fa-globe fa-2x" aria-hidden="true" style="float: left;"></i>
                     Site
-                </div>
+            </div>
         </div>
-        
+
+  
+
+        <footer class="row text-center mt-4" style="background-color: yellow;">
+            <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12">
+                teste
+            </div>
+        </footer>
     </div>
 </body>
 </html>
