--- a/empresa/empresa.html
+++ b/empresa/empresa.html
@@ -22,7 +22,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://use.fontawesome.com/630b2b9484.js"></script>
     <script>
-        setInterval(oculta, 2000);
+        setInterval(oculta, 2500);
         function oculta()
         {
             var preloader = document.querySelector('body #preloader');
@@ -44,7 +44,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-sm-12 col-lg-12 col-md-12 col-xs-12" style="padding-right: 0px;  background-color: blue;">
+            <div class="col-sm-12 col-lg-12 col-md-12 col-xs-12" style="padding-right: 0px;  background-color: gray;">
                 <div style="width: 100%; float: left; line-height: 35px;">
                     &nbsp;&nbsp;<i class="fa fa-user fa-2x" aria-hidden="true"></i>
                     &nbsp;&nbsp;&nbsp;&nbsp;Empresa - Distribuidora - 20 anos de tradição
@@ -88,9 +88,9 @@
 
   
 
-        <footer class="row text-center mt-4" style="background-color: yellow;">
+        <footer class="row text-center mt-4" style="background-color: gray;">
             <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12">
-                teste
+                rodapé
             </div>
         </footer>
     </div>
