--- a/empresa/empresa.html
+++ b/empresa/empresa.html
@@ -86,7 +86,13 @@
             </div>
         </div>
 
-  
+
+        <div class="row ldz pl-2" style="background-color: white; padding: 0.1rem;">
+                <div class="col-sm-12 col-lg-12 col-md-12 col-xs-12 text-center p-3">
+                    <i class="fa fa-globe fa-2x" aria-hidden="true" style="float: left;"></i>
+                        Site
+                </div>
+            </div>
 
         <footer class="row text-center mt-4" style="background-color: gray;">
             <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12">
