--- a/empresa/empresa.html
+++ b/empresa/empresa.html
@@ -2,14 +2,6 @@
 <html lang="pt-br">
 <head>
     <style>
-        .load{
-            width:100px;
-            height:100px;
-            position:absolute;
-            top:30%;
-            left:45%;
-            color:blue;
-        }
     </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,30 +13,11 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://use.fontawesome.com/630b2b9484.js"></script>
-    <script>
-        setInterval(oculta, 2500);
-        function oculta()
-        {
-            var preloader = document.querySelector('body #preloader');
-            preloader.style.display = 'none';
-        }
-    </script>
 </head>
 <body>
-    <div id="preloader">
-        <div class="inner">
-            <!-- HTML DA ANIMAÇÃO PRELOADER! -->
-            <div class="bolas">
-                <div></div>
-                <div></div>
-                <div></div>                    
-            </div>
-        </div>
-    </div>
-
     <div class="container">
         <div class="row">
-            <div class="col-sm-12 col-lg-12 col-md-12 col-xs-12" style="padding-right: 0px;  background-color: gray;">
+            <div class="col-sm-12 col-lg-12 col-md-12 col-xs-12" style="padding-right: 0px;  background-color: gray; font-size: 14px !important;">
                 <div style="width: 100%; float: left; line-height: 35px;">
                     &nbsp;&nbsp;<i class="fa fa-user fa-2x" aria-hidden="true"></i>
                     &nbsp;&nbsp;&nbsp;&nbsp;Empresa - Distribuidora - 20 anos de tradição
@@ -86,13 +59,6 @@
             </div>
         </div>
 
-
-        <div class="row ldz pl-2" style="background-color: white; padding: 0.1rem;">
-                <div class="col-sm-12 col-lg-12 col-md-12 col-xs-12 text-center p-3">
-                    <i class="fa fa-globe fa-2x" aria-hidden="true" style="float: left;"></i>
-                        Site
-                </div>
-            </div>
 
         <footer class="row text-center mt-4" style="background-color: gray;">
             <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12">
