--- a/empresa/empresa.html
+++ b/empresa/empresa.html
@@ -8,16 +8,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Empresa</title>
     <link rel="stylesheet" href="empresa.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/jquery-3.4.1.min.js"></script>
+    <link rel="stylesheet" href="assets/fontawesome/css/font-awesome.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://use.fontawesome.com/630b2b9484.js"></script>
 </head>
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-sm-12 col-lg-12 col-md-12 col-xs-12" style="padding-right: 0px;  background-color: gray; font-size: 14px !important;">
+            <div class="col-sm-12 col-lg-12 col-md-12 col-xs-12" style="padding-right: 0px;  background-color: #dedede; font-size: 14px !important;">
                 <div style="width: 100%; float: left; line-height: 35px;">
                     &nbsp;&nbsp;<i class="fa fa-user fa-2x" aria-hidden="true"></i>
                     &nbsp;&nbsp;&nbsp;&nbsp;Empresa - Distribuidora - 20 anos de tradição
@@ -45,7 +45,7 @@
             </div>
         </div>
 
-        <div class="row mb-4 mt-3 ldz pl-2" style="background-color: white">
+        <div class="row mb-4 mt-3 ldz pl-2" style="background-color: white; margin-top: 5px;">
             <div class="col-sm-12 col-lg-12 col-md-12 col-xs-12 text-center p-3">
                 <i class="fa fa-phone fa-2x" aria-hidden="true" style="float: left;"></i>
                 Telefone
