--- a/empresa/vendas.html
+++ b/empresa/vendas.html
@@ -1,17 +1,130 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Vendas</title>
+    <link rel="stylesheet" href="assets/css/vendas.css">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/jquery-3.4.1.min.js"></script>
     <link rel="stylesheet" href="assets/fontawesome/css/font-awesome.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <style>
+        .load {
+            width: 100px;
+            height: 100px;
+            position: absolute;
+            top: 30%;
+            left: 45%;
+            color: blue;
+        }
+    </style>
+    <script>
+        setInterval(oculta, 1200);
+        function oculta() {
+            var preloader = document.querySelector('body #preloader');
+            preloader.style.display = 'none';
+        }
+    </script>
 </head>
+
 <body>
-    
+    <div class="container-fluid">
+        <div id="preloader">
+            <div class="inner">
+                <!-- HTML DA ANIMAÇÃO PRELOADER! -->
+                <div class="bolas">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </div>
+        </div>
+        <header class="row" style="clear: both;">
+            <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12 flex text-center">
+                <a href="index.html" class="retiraLink"><i class="fa fa-home fa-2x" aria-hidden="true"
+                        style="float: left;"></i></a>
+                <div style="align-self: center; font-size: 1.2rem;">
+                    Vendas
+                </div>
+            </div>
+        </header>
+        <div class="row" id="linhaFormulario" style="margin-left: 0.2rem; margin-right: 0.2rem;">
+            <div class="col-sm-12 col-xs-12 col-lg-12 col-md-12">
+                <form action="">
+                    <div class="w-100">
+                        &nbsp;
+                    </div>
+                    <div class="w-100">
+                        &nbsp;
+                    </div>
+                    <label for="formulario"><strong>Formulário de cadastro para revenda</strong></label>
+                    <div class="form-group">
+                        <label for="nome">Nome</label>
+                        <input type="text" class="form-control" id="nome" aria-describedby="emailHelp"
+                            placeholder="Seu nome">
+                    </div>
+                    <div class="form-group">
+                        <label for="cpf">CPF/CNPJ</label>
+                        <input type="text" class="form-control" id="cpf" aria-describedby="emailHelp"
+                            placeholder="CPF ou CNPJ">
+                    </div>
+                    <div class="form-group">
+                        <label for="endereco">Endereço</label>
+                        <input type="text" class="form-control" id="endereco" aria-describedby="emailHelp"
+                            placeholder="Seu endereço">
+                    </div>
+                    <div class="form-group">
+                        <label for="telefone">Telefone</label>
+                        <input type="text" class="form-control" id="telefone" aria-describedby="emailHelp"
+                            placeholder="Seu número">
+                    </div>
+                    <div class="form-group">
+                        <label for="telefone">E-mail</label>
+                        <input type="email" class="form-control" id="email" aria-describedby="emailHelp"
+                            placeholder="Seu número">
+                    </div>
+                    <div class="form-group">
+                        <label for="telefone">Interesse</label>
+                        <input type="text" class="form-control" id="interesse" aria-describedby="emailHelp"
+                            placeholder="Qual o seu interesse?">
+                    </div>
+                    <div class="form-group">
+                        <label for="">Como nos conheceu?</label>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                            <label class="form-check-label" for="defaultCheck1">
+                                Amigo
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                            <label class="form-check-label" for="defaultCheck1">
+                                Google
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                            <label class="form-check-label" for="defaultCheck1">
+                                Aplicativo/Rede Social
+                            </label>
+                        </div>
+                    </div>
+                    <input type="submit" value="Enviar" class="btn btn-primary w-100">
+                </form>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12">
+                &nbsp;
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
