--- a/empresa/vendas.html
+++ b/empresa/vendas.html
@@ -50,7 +50,7 @@
                 <a href="index.html" class="retiraLink"><i class="fa fa-home fa-2x" aria-hidden="true"
                         style="float: left;"></i></a>
                 <div style="align-self: center; font-size: 1.2rem;">
-                    Vendas
+                    <strong>Vendas</strong>
                 </div>
             </div>
         </header>
