--- a/empresa/vendas.html
+++ b/empresa/vendas.html
@@ -115,7 +115,7 @@
                             </label>
                         </div>
                     </div>
-                    <input type="submit" value="Enviar" class="btn btn-primary w-100">
+                    <input type="submit" value="Enviar" class="btn btn-primary w-100 mb-3">
                 </form>
             </div>
         </div>
