--- a/empresa/index.html
+++ b/empresa/index.html
@@ -33,8 +33,10 @@
                 </a>
             </div>
             <div class="col-sm-5 col-lg-5 col-md-5 btn btn-info mr-2 mb-3 ml-2 item">
-                <i class="fa fa-whatsapp fa-5x" aria-hidden="true"></i></br>
-                <p>Pedidos Online</p>
+                <a href="pedidos.html">
+                    <i class="fa fa-whatsapp fa-5x" aria-hidden="true"></i></br>
+                    <p>Pedidos Online</p>
+                </a>
             </div>
             <div class="col-sm-5 col-lg-5 col-md-5 btn btn-info mr-2 mb-3 ml-2 item">
                 <i class="fa fa-map-marker fa-5x" aria-hidden="true"></i></br>
