criacao e linkagem da pagina de localizacao

--- a/empresa/index.html
+++ b/empresa/index.html
@@ -39,8 +39,10 @@
                 </a>
             </div>
             <div class="col-sm-5 col-lg-5 col-md-5 btn btn-info mr-2 mb-3 ml-2 item">
-                <i class="fa fa-map-marker fa-5x" aria-hidden="true"></i></br>
-                <p>Localização</p>
+                <a href="localizacao.html">
+                    <i class="fa fa-map-marker fa-5x" aria-hidden="true"></i></br>
+                    <p>Localização</p>
+                </a>
             </div>
             <div class="col-sm-5 col-lg-5 col-md-5 btn btn-info mb-3 mr-2 ml-2 item">
                 <i class="fa fa-credit-card truck fa-5x" aria-hidden="true"></i></br>
